# VSUD

./: 2021.10.04 - Tråde.pptx  README.md
DB og tråde - Obligatroisk opgave 2/Andreas/Portefolje_2_DB_og_Traade/: API.cpp  API.h  CMakeLists.txt  LicensePlateGenerator.cpp  LicensePlateGenerator.h  main.cpp
DB og tråde - Obligatroisk opgave 2/Andreas/build-Portefolje_2_DB_og_Traade-Desktop_Qt_6_0_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Portefolje_2_DB_og_Traade  build.ninja  cmake_install.cmake
DB og tråde - Obligatroisk opgave 2/Jacob/Portefolje_2_DB_og_Traade/: CMakeLists.txt  CMakeLists.txt.user.b08b0e2  Database.cpp  Database.h  NumberPlateGenerator.cpp  NumberPlateGenerator.h  main.cpp
DB og tråde - Obligatroisk opgave 2/Jacob/build-Portefolje_2_DB_og_Traade-Desktop_Qt_6_0_3_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
DB og tråde - Obligatroisk opgave 2/Jacob/build-Portefolje_2_DB_og_Traade-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Portefolje_2_DB_og_Traade  build.ninja  cmake_install.cmake
Threads - Opgaver/Jacob/BingoRace/BingoRace/: CMakeLists.txt  main.cpp
Threads - Opgaver/Jacob/BingoRace/build-BingoRace-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  BingoRace  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Threads - Opgaver/Jacob/Hooligans/Asynkorne_Hooligans/: CMakeLists.txt  main.cpp
Threads - Opgaver/Jacob/Hooligans/build-Asynkorne_Hooligans-Desktop_Qt_6_1_3_GCC_64bit-Debug/: .ninja_deps  (+6 more)
(+88 files in other folders)
